--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,12 +3,14 @@ layout: default
 ---
 <div class="container">
 	<div class="row">
-		<div class="col col-12">
+		<div class="col col-12 col-t-4 page">
+			{% for image in page.images %}
 			<div class="page-image-box">
-				<div class="page-image" style="background-image: url({{"/img/" | prepend: site.baseurl | append : page.image}})"></div>
+				<div class="page-image" style="background-image: url({{"/img/" | prepend: site.baseurl | append : image}})"></div>
 			</div>
+			{% endfor %}
 		</div>
-		<article class="col col-12 col-t-10 push-t-1 page">
+		<article class="col col-12 col-t-8 page">
 			<div class="page-content">
 				<div class="page-head">
 					<h1 class="page-title">{{ page.title | escape }}</h1>
