--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -12,6 +12,9 @@
   padding-bottom: 15px;
   margin-bottom: 10px;
   border-bottom: 1px solid $border-color;
+  h2 {
+    margin-bottom: 0;
+  }
   .logo-text {
     font-size: 16px;
     font-weight: 700;
