--- a/_sass/4-layouts/_home.scss
+++ b/_sass/4-layouts/_home.scss
@@ -114,7 +114,7 @@
 }
 
 .nav-menu .menu-link,
-.nav-buttons i.ion {
+.nav-buttons i.ion, a.ion {
   transition: color $global-transition;
   &:hover {
     color: #fff;
@@ -122,7 +122,7 @@
 }
 
 .nav-buttons {
-  i.ion {
+  i.ion, a.ion {
     margin-left: 10px;
     font-size: 20px;
     vertical-align: middle;
@@ -452,7 +452,7 @@
     }
   }
   .nav-menu .menu-link,
-  .nav-buttons i.ion {
+  .nav-buttons i.ion, a.ion {
     transition: color $global-transition;
     &:hover {
       color: #fff;
