--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,19 +12,19 @@
           <div class="footer-social">
             <ul class="list-reset">
               {% if site.github %}
-              <li><a href="{{ site.github }}">Github</a></li>
+              <li><a href="{{ site.github }}" target="_blank">Github</a></li>
               {% else %} {% endif %}
 
               {% if site.linkedin %}
-              <li><a href="{{ site.linkedin }}">Linkedin</a></li>
+              <li><a href="{{ site.linkedin }}" target="_blank">Linkedin</a></li>
               {% else %} {% endif %}
 
               {% if site.instagram %}
-              <li><a href="{{ site.instagram }}">Instagram</a></li>
+              <li><a href="{{ site.instagram }}" target="_blank">Instagram</a></li>
               {% else %} {% endif %}
 
               {% if site.facebook %}
-              <li><a href="{{ site.facebook }}">Facebook</a></li>
+              <li><a href="{{ site.facebook }}" target="_blank">Facebook</a></li>
               {% else %} {% endif %}
             </ul>
           </div>
