--- a/_sass/1-tools/_grid.scss
+++ b/_sass/1-tools/_grid.scss
@@ -112,6 +112,25 @@ $mq: ( $mobile:$columns, $tablet:$columns, $desktop:$columns );
 
 }
 
+
+.m-hide {
+  display: none !important;
+}
+
+.m-show {
+  display: block !important;
+}
+
+@media(min-width: $tablet) {
+  .t-hide {
+    display: none !important;
+  }
+
+  .t-show {
+    display: block !important;
+  }
+}
+
 @media(min-width: $desktop) {
   .d-hide {
     display: none !important;
