first post entry

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,8 @@ layout: default
 			<div class="post-image-box">
 				<div class="post-image" style="background-image: url({{"/img/" | prepend: site.baseurl | append : page.image}})"></div>
 			</div>
+			<div class="post-image-caption">Imagen de <a href="https://unsplash.com/@{{page.img-author}}" target="_blank">@{{page.img-author}}</a>
+			</div>
 		</div>
 	</div>
 </div>
