--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -14,7 +14,6 @@
 
 .post-image {
   min-height: 430px;
-  margin-bottom: 30px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -30,7 +29,17 @@
     padding-top: 50%;
   }
 }
-
+.post-image-caption {
+  text-align: right;
+  font-size: 14px;
+  color: $gray-blue;
+  margin-bottom: 30px;
+}
+.image-caption {
+  text-align: right;
+  font-size: 14px;
+  color: $gray-blue;
+}
 .post-head, .post-content {
   background: rgba($blue-darken, .95);
 }
@@ -39,7 +48,11 @@
   padding: 40px 15px;
   box-shadow: 0 9px 18px 0 rgba(0,0,0,0.25);
 }
-
+.post-quote {
+  font-size: 16px;
+  font-style: italic;
+  line-height: 20px;
+}
 .post-head, .post-body {
   margin-bottom: 20px;
   border-bottom: 1px solid $border-color;
@@ -132,6 +145,9 @@
 
 .post-body {
   padding-bottom: 20px;
+  h2 {
+    color: $primary-color;
+  }
 }
 
 .post-share {
