add adsense script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,5 @@
   {% endcapture %}
   {{ include_to_scssify | scssify }}
   </style>
+  <script data-ad-client="ca-pub-3961021747815310" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
