--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="{{site.baseurl}}/img/favicon.png">
+  <script data-ad-client="ca-pub-3961021747815310" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <style>
   {% capture include_to_scssify %}
     {% include main.scss %}
