--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <div class="col col-12">
         <div class="header-box">
           <div class="logo-title">
-            <a href="{{site.baseurl}}/" class="logo-text">DONNATTO</a>
+            <a href="{{site.baseurl}}/" class="logo-text">DONNATTO | BLOG</a>
           </div>
 
           <nav class="nav-menu">
@@ -21,6 +21,7 @@
             </ul>
           </nav>
           <div class="nav-buttons">
+            <a class="ion" href="{{ site.donnatto }} " target="_blank"><i class="ion ion-ios-laptop"></i></a>
             <a class="ion" href=" {{ site.github}} " target="_blank"><i class="ion ion-logo-github"></i></a>
             <a class="ion" href=" {{ site.linkedin }} " target="_blank"><i class="ion ion-logo-linkedin"></i></a>
             <i class="search-button ion ion-ios-search"></i>
