--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -70,7 +70,7 @@
 
   {% if site.instafeed == true %}
   <div class="widget widget-instagram">
-    <h3 class="widget-title">Feed de Instagram</h3>
+    <h3 class="widget-title">Instagram</h3>
     <div class="instagram-box">
       <ul id="instafeed" class="instagram-grid list-reset clearfix"></ul>
       <a class="footer-social" target="_blank" href="https://www.instagram.com/donnatto_">&#64;donnatto_</a>
