--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -211,3 +211,21 @@ table td {
 table tr:hover {
   background-color: $white;
 }
+
+/* Scroll Bar */
+body::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #1ABC9C;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(53, 116, 108);
+}
+body::-webkit-scrollbar-thumb:active {
+  background-color: rgb(46, 92, 88);
+}
+body::-webkit-scrollbar-track {
+  background-color: rgba($blue-darken, .95);
+}
