edit mail in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,7 +54,7 @@
 
   <div class="widget widget-newsletter">
     <h3 class="widget-title">Contacto</h3>
-    <div class="newsletter-subtitle">Puedes escribirme a <a class="footer-social" target="_blank" href="mailto:contact@donnatto.tech">contact&#64;donnatto.tech</a></div>
+    <div class="newsletter-subtitle">Puedes escribirme a <a class="footer-social" target="_blank" href="mailto:contact@donnatto.com">contact&#64;donnatto.com</a></div>
     <!-- <form class="c-newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}" method="POST"
       id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
       <div class="newsletter-group">
